WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312399
[Site Isolation] Validation message bubble is positioned incorrectly in cross-origin iframes
https://bugs.webkit.org/show_bug.cgi?id=312399
Summary
[Site Isolation] Validation message bubble is positioned incorrectly in cross...
zak ridouh
Reported
2026-04-15 11:55:17 PDT
When site isolation is enabled, form validation bubbles triggered from elements inside cross-origin iframes appear at the wrong position. The anchor rect sent via ShowValidationMessage IPC is in subframe coordinates, but the UIProcess treats it as main-frame coordinates. This is the same class of bug I previously fixed for color pickers, datalist suggestions, and datetime pickers.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-15 11:55:23 PDT
<
rdar://problem/174855372
>
zak ridouh
Comment 2
2026-04-15 12:09:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62839
EWS
Comment 3
2026-05-15 12:49:12 PDT
Committed
313326@main
(4221343a3e61): <
https://commits.webkit.org/313326@main
> Reviewed commits have been landed. Closing PR #62839 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug