[Site Isolation] Validation message bubble is positioned incorrectly in cross-origin iframes https://bugs.webkit.org/show_bug.cgi?id=312399 rdar://174855372

Reviewed by Aditya Keerthi.

Add rootFrameID to the ShowValidationMessage IPC message and call
convertRectToMainFrameCoordinates() on the UIProcess side before displaying
the validation bubble. This converts the anchor rect from subframe coordinates
to main-frame coordinates when the element is inside a cross-origin iframe.

Updated the Mac, iOS, and GTK handlers to use the async coordinate conversion
pattern already established by the color picker, datalist, and datetime picker
fixes.

Test: http/tests/site-isolation/validation-message-cross-origin-iframe.html

* LayoutTests/http/tests/site-isolation/resources/validation-message-iframe.html: Added.
* LayoutTests/http/tests/site-isolation/validation-message-cross-origin-iframe-expected.txt: Added.
* LayoutTests/http/tests/site-isolation/validation-message-cross-origin-iframe.html: Added.
* Source/WebCore/page/LocalFrameView.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::showValidationMessage):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/WebPageProxy.messages.in:
* Source/WebKit/UIProcess/gtk/WebPageProxyGtk.cpp:
(WebKit::WebPageProxy::showValidationMessageWithMainFrameRect):
(WebKit::WebPageProxy::showValidationMessage):
* Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::showValidationMessageWithMainFrameRect):
(WebKit::WebPageProxy::showValidationMessage):
* Source/WebKit/UIProcess/mac/WebPageProxyMac.mm:
(WebKit::WebPageProxy::showValidationMessageWithMainFrameRect):
(WebKit::WebPageProxy::showValidationMessage):
* Source/WebKit/WebProcess/WebCoreSupport/WebValidationMessageClient.cpp:
(WebKit::WebValidationMessageClient::showValidationMessage):

Canonical link: https://commits.webkit.org/313326@main