Source/WebKit/WebProcess/WebCoreSupport/WebValidationMessageClient.cpp
@@ -29,8 +29,10 @@
 #include "MessageSenderInlines.h"
 #include "WebPage.h"
 #include "WebPageProxyMessages.h"
+#include <WebCore/DocumentView.h>
 #include <WebCore/Element.h>
 #include <WebCore/LocalFrame.h>
+#include <WebCore/LocalFrameView.h>
 #include <WebCore/NodeDocument.h>
 #include <wtf/TZoneMallocInlines.h>
 
@@ -66,7 +68,12 @@ void WebValidationMessageClient::showValidationMessage(const Element& anchor, St
 
     m_currentAnchor = anchor;
     m_currentAnchorRect = anchor.boundingBoxInRootViewCoordinates();
-    Ref { *m_page }->send(Messages::WebPageProxy::ShowValidationMessage(m_currentAnchorRect, WTF::move(message)));
+
+    std::optional<FrameIdentifier> rootFrameID;
+    if (RefPtr view = anchor.document().view())
+        rootFrameID = view->rootFrameID();
+
+    Ref { *m_page }->send(Messages::WebPageProxy::ShowValidationMessage(m_currentAnchorRect, WTF::move(message), rootFrameID));
 }
 
 void WebValidationMessageClient::hideValidationMessage(const Element& anchor)
